# shape_based_matching

./: .gitignore  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CallStack1.dgml  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
CUDA/: ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  cuda_exe.vcxproj.filters  culib1.cu
CUDA/cuda_exe.dir/Debug/: cuda_exe.exe.recipe  culib1.cu-441493909.deps
cmake/: cuda.cmake  json.cmake  opencv.cmake
example/: ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  example.vcxproj.filters
example/example.dir/Debug/: example.exe.recipe  example.ilk
example/example.dir/Debug/example.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  example.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
example/example.dir/Release/: example.exe.recipe
example/example.dir/Release/example.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  example.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
example/src/: dataprepare.cpp
line2Dup/: ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  line2Dup.cpp  line2dup.vcxproj.filters
line2Dup/line2dup.dir/Debug/: line2dup.lib.recipe
line2Dup/line2dup.dir/Debug/line2dup.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  line2dup.lastbuildstate
line2Dup/line2dup.dir/Release/: line2dup.lib.recipe
line2Dup/line2dup.dir/Release/line2dup.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  line2dup.lastbuildstate
orig_test/: ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  orig_test.vcxproj.filters
orig_test/orig_test.dir/Debug/: orig_test.exe.recipe  orig_test.ilk
orig_test/orig_test.dir/Debug/orig_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  orig_test.lastbuildstate
orig_test/orig_test.dir/Release/: orig_test.exe.recipe
orig_test/orig_test.dir/Release/orig_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  orig_test.lastbuildstate
orig_test/src/: test.cpp
